--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,25 @@
 /* write your override styles here */
+#wall .tag-1 , #tag-7{
+    display: none;
+  }
+
+  div#wall #tag-2{
+      display: none;
+  }
+
+  div#wall #tag-3.wicked.slick{
+      display: none;
+  }
+  #wall div.parent #tag-4{
+      display: none;
+  }
+  div#wall div.parent #tag-5.slick{
+    display: none;
+}
+
+div#wall div.parent div:last-child div#tag-6{
+    display: none;
+}
+div#wall div.parent div:first-child div#tag-7.slick{
+    display: none;
+}
