--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,33 @@
 /* write your override styles here */
+#wall {
+    background-image: url(../images/wall.jpg) no-repeat center;
+    z-index: 1;
+    display: block;
+}
+div#wall #tag-3.slick.wicked {
+    display: none;
+    z-index: -1;
+}
+
+div#wall .tag-1 {
+    z-index: -1;
+    display: none;
+  }
+div#wall #tag-2 {
+    z-index: -1;
+    display: none;
+}
+div.parent >div#tag-4 {
+    z-index: -1;
+    display: none;
+}
+div.parent #tag-5 .slick {
+    z-index: -1 !important;
+    display: none;
+}
+div.parent div#tag-6 {
+    z-index: -1 !important;
+    display: none;
+}
+
+
