--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,13 @@
 /* write your override styles here */
+/* write your override styles here */
+/* write your override styles here */
+/* write your override styles here */
+/* write your override styles here */
+/* write your override styles here */
+/* write your override styles here */
+/* write your override styles here */
+/* write your override styles here */
+/* write your override styles here */
+/* write your override styles here */
+/* write your override styles here */
+/* write your override styles here */
