--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,30 @@
 /* write your override styles here */
+
+#wall .tag-1 {
+    display: none;
+}
+
+body div#wall #tag-2 {
+    display: none;
+}
+body div#wall #tag-3 {
+    display: none;
+}
+
+div#wall .parent #tag-4 {
+    display: none;
+}
+
+body div#wall .parent #tag-5.slick {
+    display: none;
+}
+
+/*div#wall div.parent div:last-child div#tag-6*/
+#wall #tag-6 {
+    display: none;
+}
+
+/*body div#wall div.parent div > #tag-7.slick*/
+body div#wall div.parent div:grand-child div > #tag-7.slick {
+    display: none;
+}
