--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,30 @@
 /* write your override styles here */
+#wall .tag-1 {
+    display: none;
+}
+
+div#wall #tag-2 {
+    display: none;
+}
+
+div#wall #tag-3.slick.wicked {
+    display: none;
+}
+
+
+
+#wall .parent #tag-4 {
+    display: none
+}
+
+div#wall .parent:first-child #tag-5.slick {
+    display: none
+}
+
+#wall #tag-6 {
+    display: none
+}
+
+body div#wall div.parent div > #tag-7.slick {
+    display: none
+}
